force-app/src/objects/c2g__AccountingLocalizationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of Localization in Accounting.</description>
    <fields>
        <fullName>c2g__AuditDataDeleteBatchChunkSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>Defines the number of audit data line items processed by the Audit Data Delete Batch process in a single chunk. The default value is 2,000.</description>
        <inlineHelpText>Defines the number of audit data line items processed by the Audit Data Delete Batch process in a single chunk. The default value is 2,000.</inlineHelpText>
        <label>Deprecated: AuditDataDelBatchChunkSize</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AuditDataGenerateBatchChunkSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>Defines the number of transaction line items processed by the Audit Data Generate Batch process in a single chunk. The default value is 2,000.</description>
        <inlineHelpText>Defines the number of transaction line items processed by the Audit Data Generate Batch process in a single chunk. The default value is 2,000.</inlineHelpText>
        <label>Deprecated: AuditDataGenBatchChunkSize</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AuditFileBatchChunkSize__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Defines the number of transaction line items processed by the Audit File Batch process in a single chunk.</description>
        <inlineHelpText>Defines the number of transaction line items processed by the Audit File Batch process in a single chunk.</inlineHelpText>
        <label>Deprecated: AuditFileBatchChunkSize</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AuditFileSizeInMB__c</fullName>
        <defaultValue>11.50</defaultValue>
        <description>Defines the size of the localization audit file in MB.</description>
        <inlineHelpText>Defines the size of the localization audit file in MB.</inlineHelpText>
        <label>Deprecated: AuditFileSizeInMB</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseDataLoader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected audit file data is prepared for Data Loader. The default is deselected.</description>
        <inlineHelpText>If selected audit file data is prepared for Data Loader. The default is deselected.</inlineHelpText>
        <label>Deprecated: AuditFileUsingDataLoader</label>
        <type>Checkbox</type>
    </fields>
    <label>Deprecated: AccountLocalizationSetting</label>
</CustomObject>